k8s/qotd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  qotd
  labels:
    app:  qotd
spec:
  selector:
    matchLabels:
      app: qotd
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: qotd
    spec:
      containers:
      - name:  qotd
        image:  dhrp/qotd
        resources:
          requests:
            cpu: 200m
            memory: 200Mi
          limits:
            cpu: 200m
            memory: 200Mi
        ports:
        - containerPort:  80
          name: http
