k8s/qotd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qotd
spec:
  selector:
    app: qotd
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
